# catan-simulation

./: CMakeLists.txt  Catan_Board.csv  Catan_Board.ods  README.md  catan_data.txt  catan_test.py  simulation.cpp  test.py
config_files/: bad_board_1.csv  bad_data_1.txt  catan_data.txt
non-funcional/: main.cpp  test.py
src/: CMakeLists.txt  bank.cpp  bank.h  board.cpp  board.h  boardcell.cpp  boardcell.h  components.h  default_player.cpp  default_player.h  game.cpp  game.h  game_state.h  main.cpp  old_player.cpp  old_player.h  player.cpp  player.h  road.cpp  road.h  tile.cpp  tile.h
test/: bad_data_2.txt
tests/: CMakeLists.txt  bank_test.cpp  board_test.cpp  boardcell_test.cpp  default_player_test.cpp  game_test.cpp  player_test.cpp  road_test.cpp  template.cpp  tile_test.cpp
