#add_library(board board.cpp)
add_library(boardcell boardcell.cpp)
add_library(tile tile.cpp)
target_link_libraries(tile PRIVATE boardcell)
add_library(road road.cpp)
target_link_libraries(road boardcell)
add_library(board board.cpp)
target_link_libraries(board boardcell tile road)
add_library(player player.cpp)
add_library(bank bank.cpp)
add_library(game game.cpp)
target_link_libraries(player bank board)
target_link_libraries(game bank board)


