add_executable(boardcell_test boardcell_test.cpp)
add_executable(tile_test tile_test.cpp)
add_executable(road_test road_test.cpp)
add_executable(board_test board_test.cpp)
add_executable(player_test player_test.cpp)
add_executable(bank_test bank_test.cpp)
add_executable(game_test game_test.cpp) 
target_link_libraries(boardcell_test PRIVATE Catch2::Catch2 boardcell)
target_link_libraries(tile_test PRIVATE Catch2::Catch2 tile)
target_link_libraries(road_test PRIVATE Catch2::Catch2 road)
target_link_libraries(board_test PRIVATE Catch2::Catch2 board)
target_link_libraries(player_test PRIVATE Catch2::Catch2 player board)
target_link_libraries(bank_test PRIVATE Catch2::Catch2 bank)
target_link_libraries(game_test PRIVATE Catch2::Catch2 game)
add_test(boardcell_ctest boardcell_test)
add_test(tile_ctest tile_test)
add_test(road_ctest road_test)
add_test(board_ctest board_test)
add_test(player_ctest player_test)
add_test(bank_ctest bank_test)
add_test(game_ctest game_test)