add_executable(board_test board_test.cpp)
add_executable(player_test player_test.cpp)
add_executable(default_player_test default_player_test.cpp)
add_executable(bank_test bank_test.cpp)
target_link_libraries(board_test PRIVATE Catch2::Catch2 board)
target_link_libraries(player_test PRIVATE Catch2::Catch2 player default_player board)
target_link_libraries(default_player_test PRIVATE Catch2::Catch2 default_player)
target_link_libraries(bank_test PRIVATE Catch2::Catch2 bank)
add_test(board_ctest board_test)
add_test(player_ctest player_test)
add_test(default_player_ctest default_player_test)
add_test(bank_ctest bank_test)